--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "food_delivery",
-    "short_name": "food_delivery",
+    "name": "food_delivery_app",
+    "short_name": "food_delivery_app",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
