--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_core: "^0.7.0"
   firebase_auth: "^0.20.1"
   provider: ^4.3.2+1
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
