--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,8 @@ dependencies:
   provider: ^4.3.2+1
   fluttertoast: ^8.0.8
   google_fonts: ^1.1.2
-  
+  simple_animations: ^1.3.3
+  flutter_staggered_grid_view: ^0.4.0
 
 dev_dependencies:
   flutter_test:
@@ -42,3 +43,5 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/icons/
+    - assets/
