Redundant code removed.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: food_delivery_app
-description: A Trail Food Delivery app project.
+description: A Food Delivery app project.
 
 version: 1.0.0+1
 
